<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:fancy="http://schemas.android.com/apk/res-auto"
              tools:context="com.paxdron.testdcti.ShipingFragment"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<mehdi.sakout.fancybuttons.FancyButton
			android:id="@+id/btnBack"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			fancy:fb_borderColor="#FFFFFF"
			fancy:fb_borderWidth="1dp"
			fancy:fb_defaultColor="@color/colorPrimary"
			fancy:fb_focusColor="@color/colorPrimaryDark"
			fancy:fb_text="@string/btnBack"
			fancy:fb_textColor="@color/white"
			/>
		<mehdi.sakout.fancybuttons.FancyButton
			android:id="@+id/btnNext"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			fancy:fb_borderColor="#FFFFFF"
			fancy:fb_borderWidth="1dp"
			fancy:fb_defaultColor="@color/colorAccent"
			fancy:fb_focusColor="@color/colorPrimary"
			fancy:fb_text="@string/btnGotoPayment"
			fancy:fb_textColor="@color/white"
			android:layout_marginLeft="50dp"
			/>
	</LinearLayout>
	<android.support.v7.widget.CardView
		xmlns:card_view="http://schemas.android.com/apk/res-auto"
		android:id="@+id/card_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/activity_horizontal_margin"
			>
		<android.support.design.widget.TextInputLayout
			android:id="@+id/txtMail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/etMail"
				android:hint="@string/Mail"
				/>
		</android.support.design.widget.TextInputLayout>
		<android.support.design.widget.TextInputLayout
			android:id="@+id/txtName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/etName"
				android:hint="@string/name"
				/>
		</android.support.design.widget.TextInputLayout>
			<android.support.design.widget.TextInputLayout
			android:id="@+id/txtAddress"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>

				<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/etAddress"
					android:hint="@string/address"
					/>
			</android.support.design.widget.TextInputLayout>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tvShipingType"
			    android:textSize="15sp"
			    android:layout_marginTop="@dimen/activity_horizontal_margin"
				/>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/standardShip"
				/>
				<TextView
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/stndrdTime"
					/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ultraShip"
				/>
				<TextView
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/ultraTime"/>
			</LinearLayout>
		</LinearLayout>
	</android.support.v7.widget.CardView>
</LinearLayout>

