<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:fancy="http://schemas.android.com/apk/res-auto"
	android:id="@+id/activity_search"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.paxdron.testdcti.SearchActivity">
	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtCustomer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/etCustomer"
	    android:hint="@string/Customer"
		/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtBU"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtCustomer"
		>
	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/etBU"
		android:hint="@string/BU"
		/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtBreed"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtBU"
		>
	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/etBreed"
		android:hint="@string/breed"
		/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtGender"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtBreed"
		>
	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/etGender"
		android:hint="@string/gender"

		/>
	</android.support.design.widget.TextInputLayout>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/tvInventory"
	    android:text="@string/tvInventory"
	    android:layout_below="@id/txtGender"
	    android:textSize="15dp"
		/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
	    android:id="@+id/rbuttons"
		android:layout_below="@id/txtGender"
	    android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true">
		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rbInTruck"
			android:id="@+id/rbInTruck"

			/>
		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rbRetailSilo"
			android:id="@+id/rbRetail"
			/>
	</LinearLayout>
	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/btnSearch"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		fancy:fb_borderColor="#FFFFFF"
		fancy:fb_borderWidth="1dp"
		fancy:fb_defaultColor="@color/colorPrimary"
		fancy:fb_focusColor="@color/colorPrimaryDark"
		fancy:fb_text="@string/btnSearch"
		fancy:fb_textColor="@color/white"
	    android:layout_below="@id/rbuttons"
	    android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:onClick="regresar"
		/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

	</LinearLayout>
	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/btnBack"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		fancy:fb_borderColor="#FFFFFF"
		fancy:fb_borderWidth="1dp"
		fancy:fb_defaultColor="@color/colorPrimary"
		fancy:fb_focusColor="@color/colorPrimaryDark"
		fancy:fb_text="@string/btnBack"
		fancy:fb_textColor="@color/white"
	    android:layout_below="@id/btnSearch"
		android:onClick="regresar"
		/>
	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/btnSettings"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		fancy:fb_borderColor="#FFFFFF"
		fancy:fb_borderWidth="1dp"
		fancy:fb_defaultColor="@color/colorPrimary"
		fancy:fb_focusColor="@color/colorPrimaryDark"
		fancy:fb_text="@string/btnSettings"
		fancy:fb_textColor="@color/white"
	    android:layout_below="@id/btnSearch"
	    android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"/>
</RelativeLayout>
