<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.paxdron.testdcti.view.fragments.CreditCardFragment">

	<!-- TODO: Update blank fragment layout -->
	<TextView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:text="@string/tvType"
		android:textSize="20dp"
		/>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
	    android:orientation="vertical"
	    android:id="@+id/lltype"
		>
		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/Visa"
			android:id="@+id/rbVisa"
			/>
		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/MasterCard"
			android:id="@+id/rbMastercard"
			/>
	</LinearLayout>
	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtCardNumber"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    android:layout_below="@id/lltype"
		>
		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/etCardNumber"
			android:hint="@string/cardNumber"
			/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtMonth"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    android:layout_below="@id/txtCardNumber"
		>
		<EditText
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:id="@+id/etMonth"
			android:hint="@string/month"
		    android:inputType="number"
		    android:maxLength="2"
			/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtYear"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    android:layout_below="@id/txtCardNumber"
	    android:layout_toRightOf="@id/txtMonth"
		>
		<EditText
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:id="@+id/etYear"
			android:hint="@string/year"
			android:inputType="number"
			android:maxLength="4"
			/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtCVV"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    android:layout_below="@id/txtCardNumber"
	    android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true">
		<EditText
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:id="@+id/etCVV"
			android:hint="@string/cvv"
			android:inputType="number"
			android:maxLength="3"
			/>
	</android.support.design.widget.TextInputLayout>

</RelativeLayout>
