<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:fancy="http://schemas.android.com/apk/res-auto"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.paxdron.testdcti.view.MainActivity">

	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/btnSearch"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		fancy:fb_borderColor="#FFFFFF"
		fancy:fb_borderWidth="1dp"
		fancy:fb_defaultColor="@color/colorPrimary"
		fancy:fb_focusColor="@color/colorPrimaryDark"
		fancy:fb_text="@string/btnSearch"
		fancy:fb_textColor="@color/white"
	    android:onClick="showSearch"
		/>
	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/btnSilo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		fancy:fb_borderColor="#FFFFFF"
		fancy:fb_borderWidth="1dp"
		fancy:fb_defaultColor="@color/colorPrimary"
		fancy:fb_focusColor="@color/colorPrimaryDark"
		fancy:fb_text="@string/btnSilo"
		fancy:fb_textColor="@color/white"
	    android:layout_centerHorizontal="true"
		/>
	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/btnAddToCart"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		fancy:fb_borderColor="#FFFFFF"
		fancy:fb_borderWidth="1dp"
		fancy:fb_defaultColor="@color/colorAccent"
		fancy:fb_focusColor="@color/colorPrimary"
		fancy:fb_text="@string/btnAddToCart"
		fancy:fb_textColor="@color/white"
	    android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:onClick="gotoCart"
		/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tvNoAnimales"
	    android:id="@+id/tvNoAnimals"
	    android:layout_below="@id/btnSearch"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
		android:layout_marginBottom="@dimen/activity_vertical_margin"
		/>
	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/btnBack"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		fancy:fb_borderColor="#FFFFFF"
		fancy:fb_borderWidth="1dp"
		fancy:fb_defaultColor="@color/colorPrimary"
		fancy:fb_focusColor="@color/colorPrimaryDark"
		fancy:fb_text="@string/btnBack"
		fancy:fb_textColor="@color/white"
	    android:layout_alignParentBottom="true"
		/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/header"
	    android:layout_below="@id/tvNoAnimals"
		android:orientation="horizontal"
		android:weightSum="10"
	    android:background="@color/gray_light"
		>
		<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:id="@+id/selectAll"
			android:layout_weight="1"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/naabCode"
			android:layout_weight="3"
		    android:gravity="center"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name"
			android:layout_weight="3"
			android:gravity="center"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/RegName"
		    android:layout_weight="3"
			android:gravity="center"
			/>
	</LinearLayout>
	<ListView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/lvAnimales"
		android:layout_below="@id/header"
		android:layout_above="@id/btnBack"
		/>

</RelativeLayout>
