<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="10"
	>
		<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/selectAnimal"
			android:layout_weight="1"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/naabCode"
			android:id="@+id/naabCode"
			android:layout_weight="3"

			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name"
			android:id="@+id/name"
			android:layout_weight="3"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/RegName"
			android:id="@+id/RegName"
			android:layout_weight="3"
			/>

</LinearLayout>