<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:fancy="http://schemas.android.com/apk/res-auto"
              tools:context="com.paxdron.testdcti.view.fragments.CartFragment"
              android:orientation="vertical"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<mehdi.sakout.fancybuttons.FancyButton
			android:id="@+id/btnBack"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			fancy:fb_borderColor="#FFFFFF"
			fancy:fb_borderWidth="1dp"
			fancy:fb_defaultColor="@color/colorPrimary"
			fancy:fb_focusColor="@color/colorPrimaryDark"
			fancy:fb_text="@string/btnBack"
			fancy:fb_textColor="@color/white"
			/>
		<mehdi.sakout.fancybuttons.FancyButton
			android:id="@+id/btnNext"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			fancy:fb_borderColor="#FFFFFF"
			fancy:fb_borderWidth="1dp"
			fancy:fb_defaultColor="@color/colorAccent"
			fancy:fb_focusColor="@color/colorPrimary"
			fancy:fb_text="@string/btnGotoShiping"
			fancy:fb_textColor="@color/white"
		    android:layout_marginLeft="50dp"
			/>
	</LinearLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtCustomer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/etCustomer"
			android:hint="@string/Customer"
			/>
	</android.support.design.widget.TextInputLayout>
	<android.support.v7.widget.RecyclerView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
	    android:id="@+id/rvCart"
		>

	</android.support.v7.widget.RecyclerView>
</LinearLayout>
